--- a/roles/k8s-node/templates/resolv.conf
+++ b/roles/k8s-node/templates/resolv.conf
@@ -1,3 +1,3 @@
-search default.svc.{{ CLUSTER_DOMAIN | regex_replace('\..*$', '') }} svc.{{ CLUSTER_DOMAIN | regex_replace('\..*$', '') }} {{ CLUSTER_DOMAIN | regex_replace('\..*$', '') }}
+search default.svc.{{ CLUSTER_DOMAIN }} svc.{{ CLUSTER_DOMAIN }} {{ CLUSTER_DOMAIN }}
 nameserver {{ KUBE_DNS_SERVER }}
 nameserver {{ DNS_SERVER }}
