--- a/roles/k8s-master/tasks/main.yml
+++ b/roles/k8s-master/tasks/main.yml
@@ -1,14 +1,15 @@
+- name: load cert vars
+  include_vars: roles/gen-cert/vars/main.yml
+
 - name: set hostname
   hostname: name=k8s-master.{{ ansible_default_ipv4.address | regex_replace('\.', '') }}
-
-- name: copy resolv file
-  template: src=resolv.conf dest=/etc/resolv.conf mode=644
 
 - name: init k8s install dir
   file: path={{ K8S_WORK_DIR }}/{{ item }} owner=root group=root mode=0755 state=directory
   with_items:
     - bin
     - cfg
+    - ssl
     - manifests
 
 - name: init kube-dns works dir
@@ -17,22 +18,15 @@
 - name: Install yum epel-release
   yum: name=epel-release state=present
 
-- name: install etcd flannel
-  yum: name={{ item }} state=latest
+- name: install flannel
+  yum: name=flannel state=latest
+
+- name: copy cert to master
+  copy: src={{CERT_DIR}}/{{ item }} dest={{ K8S_WORK_DIR }}/ssl/{{ item }} owner=root group=root mode=0644
   with_items:
-    - etcd
-    - flannel
-
-- name: copy etcd config file
-  template: src=etcd.conf dest=/etc/etcd/etcd.conf mode=644
-
-- name: start etcd
-  systemd: name=etcd state=restarted daemon_reload=yes enabled=True
-
-- name: create k8s networks
-  shell: etcdctl mk /atomic.io/network/config '{"Network":"172.17.0.0/16"}'
-  changed_when: false
-  ignore_errors: True
+    - ca.pem
+    - apiserver.pem
+    - apiserver-key.pem
 
 - name: copy k8s-master commands
   copy: src={{ item }} dest={{ K8S_WORK_DIR }}/bin/{{ item }} owner=root group=root mode=0755
@@ -76,6 +70,13 @@
     - kube-scheduler
     - flanneld
     - kube-dns
+
+- name: copy lvs scripts
+  template: src=lvs_real dest=/usr/local/bin/lvs_real mode=0755
+
+- name: start lvs vip
+  command: /usr/local/bin/lvs_real start
+  changed_when: false
 
 - name: "k8s-master install succuess"
   debug: msg="k8s-master install succuess"
