--- a/roles/k8s-master/templates/kube-apiserver.service
+++ b/roles/k8s-master/templates/kube-apiserver.service
@@ -13,7 +13,8 @@ ExecStart={{ K8S_WORK_DIR }}/bin/kube-apiserver    ${KUBE_LOGTOSTDERR}         \
                         ${KUBE_ADVERTISE_ADDR}      \
                         ${KUBE_ALLOW_PRIV}          \
                         ${KUBE_SERVICE_ADDRESSES}   \
-                        ${KUBE_ADMISSION_CONTROL} 
+                        ${KUBE_ADMISSION_CONTROL}   \
+                        --secure-port=6443 --tls-cert-file={{ K8S_WORK_DIR }}/ssl/apiserver.pem --tls-private-key-file={{ K8S_WORK_DIR }}/ssl/apiserver-key.pem --client-ca-file={{ K8S_WORK_DIR }}/ssl/ca.pem --service-account-key-file={{ K8S_WORK_DIR }}/ssl/apiserver-key.pem
 Restart=on-failure
 
 [Install]
