--- a/roles/k8s-node/templates/kubelet.service
+++ b/roles/k8s-node/templates/kubelet.service
@@ -5,14 +5,15 @@ Requires=docker.service
 
 [Service]
 EnvironmentFile=-{{ K8S_WORK_DIR }}/cfg/kubelet
-ExecStart={{ K8S_WORK_DIR }}/bin/kubelet --pod-manifest-path={{ K8S_WORK_DIR }}/manifests   ${KUBE_LOGTOSTDERR}     \
+ExecStart={{ K8S_WORK_DIR }}/bin/kubelet --pod-manifest-path={{ K8S_WORK_DIR }}/manifests --cluster-dns={{ KUBE_DNS_SERVER }} --cluster-domain={{ CLUSTER_DOMAIN }}  ${KUBE_LOGTOSTDERR}     \
                     ${KUBE_LOG_LEVEL}       \
                     ${NODE_ADDRESS}         \
                     ${NODE_PORT}            \
                     ${NODE_HOSTNAME}        \
                     ${KUBELET_API_SERVER}   \
                     ${KUBE_ALLOW_PRIV}      \
-                    ${KUBELET_ARGS}
+                    ${KUBELET_ARGS} \
+                    --tls-cert-file={{ K8S_WORK_DIR }}/ssl/{{ hostname }}-worker.pem --tls-private-key-file={{ K8S_WORK_DIR }}/ssl/{{ hostname }}-worker-key.pem --kubeconfig={{ K8S_WORK_DIR }}/cfg/kubelet-config.yaml
 Restart=on-failure
 KillMode=process
 
